<resources>
    <string name="app_name">Register</string>
    <string name="username">Username</string>
    <string name="university_roll_number">University Roll Number</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="department">Department</string>
    <string name="semester">Semester</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="passkey">Passkey</string>
</resources>
